// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.aggregate.protos.shared.backend;

option java_outer_classname = "CreateJobRequestProto";
option java_package = "com.google.aggregate.protos.shared.backend";

/**
 * The request object for the Aggregation Service Frontend API that allows ad-techs to request
 * aggregation reports for conversion data.
 */
message CreateJobRequest {
  option deprecated = true;
  /** Unique identifier provided by the ad-tech. */
  string job_request_id = 1;
  /** Name of the input prefix data file. */
  string input_data_blob_prefix = 2;
  /** Bucket name for the input data file. */
  string input_data_bucket_name = 3;
  /** Name of the output prefix data file. */
  string output_data_blob_prefix = 4;
  /** Bucket name for the output data file. */
  string output_data_bucket_name = 5;
  /** URL to the output domain file. This is derived from jobParameters. */
  string output_domain_blob_prefix = 6;
  /** URL to the output domain file. This is derived from jobParameters. */
  string output_domain_bucket_name = 7;
  /** URL to notify the result. */
  string postback_url = 8;
  /** Ad-tech origin where reports will be sent. This is derived from jobParameters. */
  string attribution_report_to = 9;
  /**
   * Optional debugging privacy-budget-limit to be passed to privacy-budget-service during the
   * origin trial period. This is derived from jobParameters.
   */
  int32 debug_privacy_budget_limit = 10;
  /** Data plane application specific parameters. */
  map<string, string> job_parameters = 11;
  /** Ad-tech reporting site where reports will be sent. This is derived from jobParameters. */
  string reporting_site = 12;
  /** List of URLs to the input prefix data files. */
  repeated string input_data_blob_prefixes = 13;
}
